Fix required indicator contrast for dark mode

--- a/admin/style/scss/themes/_dark.scss
+++ b/admin/style/scss/themes/_dark.scss
@@ -34,6 +34,8 @@ $info-alt:        #bce8f1;
 $error:           #ffbaba;
 $error-alt:       #ae323b;
 
+$required:        #f783b3;
+
 $success:         #bee74b;
 $success-alt:     #9bca1c;
 
