--- a/admin/style/scss/themes/_light.scss
+++ b/admin/style/scss/themes/_light.scss
@@ -33,6 +33,8 @@ $info-alt:        #bce8f1;
 $error:           #ffbaba;
 $error-alt:       #ae323b;
 
+$required:        #ae323b;
+
 $success:         #bee74b;
 $success-alt:     #9bca1c;
 
